libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__fn_empty.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Err(
    [1mcall expression array, requires at least a single item, the function to be called.[22m
    ├╴at [3mlibs/@local/hql/cst/src/parse/json/node.rs:117:24[23m
    ╰╴1 additional opaque attachment,
)
