libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__fn_empty_args.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Ok(
    Node {
        expr: Call(
            Call {
                fn: Node {
                    expr: Path(
                        Path(
                            [
                                Symbol(
                                    "func",
                                ),
                            ],
                        ),
                    ),
                    span: 1..7,
                },
                args: [],
            },
        ),
        span: 0..8,
    },
)
