libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__fn_is_expr.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Ok(
    Node {
        expr: Call(
            Call {
                fn: Node {
                    expr: Call(
                        Call {
                            fn: Node {
                                expr: Path(
                                    Path(
                                        [
                                            Symbol(
                                                "input",
                                            ),
                                        ],
                                    ),
                                ),
                                span: 15..22,
                            },
                            args: [
                                Node {
                                    expr: Path(
                                        Path(
                                            [
                                                Symbol(
                                                    "variable",
                                                ),
                                            ],
                                        ),
                                    ),
                                    span: 24..34,
                                },
                            ],
                        },
                    ),
                    span: 14..35,
                },
                args: [
                    Node {
                        expr: Path(
                            Path(
                                [
                                    Symbol(
                                        "arg1",
                                    ),
                                ],
                            ),
                        ),
                        span: 49..55,
                    },
                    Node {
                        expr: Path(
                            Path(
                                [
                                    Symbol(
                                        "arg2",
                                    ),
                                ],
                            ),
                        ),
                        span: 69..75,
                    },
                ],
            },
        ),
        span: 0..85,
    },
)
