libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__object_is_args_without_fn.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Err(
    [1mmalformed expression object[22m
    ├╴at [3mlibs/@local/hql/cst/src/parse/json/node.rs:122:14[23m
    │
    ╰─▶ [1mmissing required key `fn`[22m
        ├╴at [3mlibs/@local/hql/cst/src/parse/json/node_object.rs:172:13[23m
        ╰╴1 additional opaque attachment,
)
