libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__object_is_call_without_args.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Ok(
    Node {
        expr: Call(
            Call {
                fn: Node {
                    expr: Path(
                        Path(
                            [
                                Symbol(
                                    "func",
                                ),
                            ],
                        ),
                    ),
                    span: 7..13,
                },
                args: [],
            },
        ),
        span: 0..14,
    },
)
