libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__object_is_constant.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Ok(
    Node {
        expr: Constant(
            Constant {
                value: Value {
                    kind: Number(
                        "42",
                    ),
                    span: 10..12,
                },
                type: None,
            },
        ),
        span: 0..13,
    },
)
