libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__object_is_constant_with_type.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Ok(
    Node {
        expr: Constant(
            Constant {
                value: Value {
                    kind: Number(
                        "42",
                    ),
                    span: 25..27,
                },
                type: Some(
                    ConstantType {
                        type: Path(
                            Path(
                                [
                                    Symbol(
                                        "u32",
                                    ),
                                ],
                            ),
                        ),
                        span: 9..14,
                    },
                ),
            },
        ),
        span: 0..28,
    },
)
