libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__object_is_empty.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Err(
    [1mmalformed expression object[22m
    ├╴at [3mlibs/@local/hql/cst/src/parse/json/node.rs:136:14[23m
    │
    ╰─▶ [1mreceived empty object, but expected non-empty one[22m
        ╰╴at [3mlibs/@local/hql/cst/src/parse/json/node_object.rs:517:35[23m,
)
