libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__object_is_invalid.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Err(
    [1mmalformed expression object[22m
    ├╴at [3mlibs/@local/hql/cst/src/parse/json/node.rs:122:14[23m
    │
    ├─▶ [1munable to parse[22m
    │   ╰╴at [3mlibs/@local/hql/cst/src/parse/json/node_object.rs:514:14[23m
    │
    ├─▶ [1merror while parsing object entry[22m
    │   ╰╴at [3mlibs/@local/hql/cst/src/parse/json/util.rs:202:55[23m
    │
    ╰─▶ [1munexpected key `unknown`[22m
        ├╴at [3mlibs/@local/hql/cst/src/parse/json/node_object.rs:495:36[23m
        ╰╴1 additional opaque attachment,
)
